# computergrafik

./: .gitignore  .gitmodules
asteroids/: CMakeLists.txt  game.cc  game.h  geometry.h  main_game.cc  math_test.cc  physics.h  physics_test.cc  sdl2_game_controller.cc  sdl2_game_controller.h  sdl2_renderer.cc  sdl2_renderer.h  sound.h  timer.cc  timer.h
geometry/: CMakeLists.txt  geometry_test.cc
math/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  math.cc  math.h  math.sln  math.tcc  math_test.cc  math_test.vcxproj  math_test.vcxproj.filters
raytracing/: CMakeLists.txt  geometry.tcc  math.tcc
